--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -1,11 +1,12 @@
 //* ###### Переменные стилей ##############
 //? ====== Подключение шрифтов ============
+@import "fonts.scss";
 
-$fontFamily: "Arial", sans-serif;
+$fontFamily: "Gilroy", sans-serif;
 
 //? ====== Контейнер ======================
 $maxWidth: 1920; // Не меняем.
-$maxWidthContainer: 1200;
+$maxWidthContainer: 1100;
 $md1: $maxWidthContainer + 10;
 $md2: 767.98;
 
